static/styles.css
body {
  margin: 0;
  font-family: "Rubik", sans-serif;
  color: #728ab7;
  background: #f0f0f3;
  overflow-x: hidden;
  text-align: center;
}

section {
  position: relative;
  display: flex;
  flex-direction: column;
  align-items: center;
  min-height: 200px;
  padding: 100px 20vw;
}

.blue {
  background: #0066ff;
}

.light-blue {
  background: #728ab7;
  color: #f0f0f3;
}

.spacer {
  aspect-ratio: 960/300;
  width: 100%;
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
  border: 0;
}

.layer-white {
  background-image: url("images/layer-white.svg");
}

.flip {
  transform: rotate(180deg);
}
.blob-motion {
  position: absolute;
  transform: translateY(-20%);
  z-index: 0;
}
.blob-content {
  z-index: 1;
}

.neuro {
  box-shadow: -2.17893px -2.17893px 6.5368px #ffffff,
    2.17893px 2.17893px 6.5368px rgba(174, 174, 192, 0.4);
  border-radius: 21.3535px;
}
nav {
  font-size: 15px;
  font-weight: bold;
}
.hero {
  background-image: url("images/hero.svg");
  background-size: cover;
  background-position: center;
  z-index: -1;
}
header {
  z-index: 0;
  box-shadow: 0px 2px 5px rgb(119, 126, 141);
}
footer {
  color: #f0f0f3;
  background-color: #728ab7;
}
#footer-link {
  text-decoration: underline;
}
#stats-dashboard {
  border: 5px solid #000;
}
.other-stats {
  border: 5px solid #000;
  width: 350px;
  height: 350px;
}
.clock {
  /* necessary? */
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  border: 5px solid #000;
  /* .clock */
  width: 175px;
  height: 175px;
  display: flex;
  justify-content: center;
  align-items: center;
  background: url("images/clock.png");
  background-size: cover;
  border: 4px solid #f0f0f3;
  border-radius: 50%;
  box-shadow: 0 -15px 15px rgba(0, 0, 0, 0.05),
    inset 0 -15px 15px rgba(0, 0, 0, 0.05), 0 15px 15px rgba(255, 255, 255, 0.3),
    inset 0 15px 15px rgba(255, 255, 255, 0.3);
}
.clock:before {
  content: "";
  position: absolute;
  width: 7.5px;
  height: 7.5px;
  background: #000;
  border-radius: 50%;
  z-index: 10000;
}
.clock .hour,
.clock .min,
.clock .sec {
  position: absolute;
}
.clock .hour,
.hr {
  width: 80px;
  height: 80px;
}
.clock .min,
.mn {
  width: 95px;
  height: 95px;
}
.clock .sec,
.sc {
  width: 115px;
  height: 115px;
}
.hr,
.mn,
.sc {
  display: flex;
  justify-content: center;
  /* align-items: center; */
  position: absolute;
  border-radius: 50%;
}
.hr:before {
  content: "";
  position: absolute;
  width: 4px;
  height: 40px;
  background: #ff105e;
  z-index: 10;
  border-radius: 6px 6px 0 0;
}
.mn:before {
  content: "";
  position: absolute;
  width: 2px;
  height: 45px;
  background: #000;
  z-index: 11;
  border-radius: 6px 6px 0 0;
}
.sc:before {
  content: "";
  position: absolute;
  width: 1px;
  height: 75px;
  background: #000;
  z-index: 12;
  border-radius: 6px 6px 0 0;
}
/*
.stats {
  width: 500px;
  height: 500px;
}
* {
  border: 5px solid #000;
}*/
.weather-location {
  font-size: larger;
}

